2015-01-08  Paul Eggert  <eggert@cs.ucla.edu>

	* lisp.h (TAG_SYMPTR): Don't do arithmetic on NULL.
	This is a followup to the "Port Qnil==0 XUNTAG to clang" patch.
	Although clang doesn't need it, some other compiler might, and
	it's easy enough to be safe.

	* conf_post.h (ATTRIBUTE_ALLOC_SIZE): Port to clang 3.5.0.
	Apparently clang removed support for the alloc_size attribute.

	Port Qnil==0 XUNTAG to clang
	clang has undefined behavior if the program subtracts an integer
	from (char *) 0.  Problem reported by YAMAMOTO Mitsuharu in:
	http://lists.gnu.org/archive/html/emacs-devel/2015-01/msg00132.html
	* lisp.h (lisp_h_XUNTAG) [USE_LSB_TAG]:
	(XUNTAG) [!USE_LSB_TAG]: Port to clang 3.5.0.

	Port GFileMonitor * hack to Qnil==0 platforms
	Reported by Glenn Morris in: http://bugs.gnu.org/15880#112
	* gfilenotify.c (monitor_to_lisp, lisp_to_monitor): New functions.
	(dir_monitor_callback, Fgfile_add_watch, Fgfile_rm_watch): Use them.

2015-01-06  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (x_set_window_size): Call updateFrameSize to get real
	size instead of using widht/height.  The frame may be constrained.

2015-01-05  Paul Eggert  <eggert@cs.ucla.edu>

	* lisp.h (XSYMBOL): Parenthesize id in forward decl.
	Needed when neither optimizing nor inlining.
	Also, sort decls alphabetically.

2015-01-05  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c, w32.h, w32fns.c, w32font.c, w32menu.c, w32notify.c:
	* w32proc.c, w32select.c, w32term.c, w32uniscribe.c: Remove
	declarations of Q* variables that represent symbols.

2015-01-05  Paul Eggert  <eggert@cs.ucla.edu>

	Use 0 for Qnil
	Fixes Bug#15880.
	If USE_LSB_TAG, arrange for the representation of Qnil to be zero so
	that NILP (x) is equivalent to testing whether x is 0 at the
	machine level.  The overall effects of this and the previous patch
	shrink the size of the text segment by 2.3% and speeds up
	compilation of all the .elc files by about 0.5% on my platform,
	which is Fedora 20 x86-64.